# sportcalculator

./: .eslintrc.json  .gitignore  .gitpod.yml  README.md  gitpod.yml  package-lock.json  package.json  tsconfig.json
Models/: Food.tsx  Meal.tsx  MealType.tsx  NutritionalDetails.tsx  Recipe.ts  TotalMeal.ts  index.ts
back/: Cargo.toml  readme.md
back/db/: model_sports.db
back/src/: ciqual_table_minified.json  main.rs  models.rs
back/src/models/: ciqual_food.rs  food.rs  meal.rs  mod.rs  user.rs
back/src/repository/: core.rs  ingredients.rs  meals.rs  mod.rs  users.rs
back/src/services/: ingredients.rs  meals.rs  mod.rs
back/tools/: thunder-collection_Api Calls.json
components/: CalculatorTable.js
components/Camera/: CameraBarCodeScanner.tsx  CameraScannerDialog.tsx  CameraScannerDrawer.tsx  NewCameraBarCodeScanner.tsx
components/Daily/: Daily.tsx  DailyFoodDetails.tsx  DailyTabItem.js  DailyTabItem.tsx  DailyTabs.js  DailyTabs.tsx  DailyTotal.tsx
components/Food/: AddIngredientDialog.tsx  FoodsMobileTable.tsx  FoodsTable.tsx
components/Layout/: MainLayout.tsx  MainNavBar.tsx
components/Meal/: MealTable.tsx  TotalMealTable.tsx  TotalMealTableMobile.tsx
components/Recipe/: AddRecipeForm.tsx  MyRecipes.tsx  MyRecipesListItem.tsx  RecipeForm.tsx
front/: next.config.js  package-lock.json
front/pages/: AddRecipe.tsx  Recipes.tsx  _document.tsx  index.tsx
pages/: AddRecipe.tsx  Calculator.js  Camera.tsx  Daily.tsx  FollowUp.tsx  Recipes.tsx  _app.tsx  index.js  index.tsx
pages/Recipe/: [recipeId].tsx
src/: Link.tsx  theme.tsx
(+48 files in other folders)
