[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
pickledb = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
[dependencies.passwords]
version = "*"
features = ["crypto"]
[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"              # Enable (de)serialisation
]
